--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 {
     "name": "BrightSpace PDF Extension",
-    "description": "An extension that allows users of BrightSpace to open PDF's shown in the 'Content' tab to be opened in a separate tab",
+    "description": "An extension that allows users of BrightSpace to open PDF's, video's and text shown in the 'Content' tab to be opened in a separate tab.",
     "version": "0.1",
     "manifest_version": 3,
     "permissions": ["activeTab", "scripting"],
     "content_scripts": [
         {
           "matches": ["https://brightspace.universiteitleiden.nl/*/topics/*","https://s.brightspace.com/*"],
-          "exclude_matches": ["https://brightspace.universiteitleiden.nl/*/units/*"],
-          "exclude_globs": ["*units*"],
           "all_frames": true,
           "run_at": "document_end",
           "js": ["content-script.js"]
