--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "BrightSpace PDF Extension",
+    "name": "BrightSpace Open In New Tab Extension",
     "description": "An extension that allows users of BrightSpace to open PDF's, video's and text shown in the 'Content' tab to be opened in a separate tab.",
     "version": "1.0",
     "manifest_version": 3,
