--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "name": "BrightSpace Open In New Tab Extension",
-    "description": "An extension that allows users of BrightSpace to open PDF's, video's and text shown in the 'Content' tab to be opened in a separate tab.",
+    "description": "Allows users of BrightSpace to open PDF's, video's and text shown in the 'Content' tab in a separate tab using a button.",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["activeTab", "scripting"],
+    "permissions": ["activeTab"],
     "content_scripts": [
         {
           "matches": ["https://brightspace.universiteitleiden.nl/*/topics/*","https://s.brightspace.com/*"],
