--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,12 @@
     "permissions": ["activeTab"],
     "content_scripts": [
         {
-          "matches": ["https://brightspace.universiteitleiden.nl/*/topics/*","https://s.brightspace.com/*"],
+          "matches": ["https://brightspace.universiteitleiden.nl/*","https://s.brightspace.com/*"],
           "all_frames": true,
-          "run_at": "document_end",
-          "js": ["content-script.js"]
+          "match_origin_as_fallback": true,
+          "run_at": "document_idle",
+          "js": ["content-script.js"],
+          "css": ["styles.css"]
         }
       ],
     "icons": {
