Add support for Firefox

--- a/manifest.json
+++ b/manifest.json
@@ -66,5 +66,10 @@
         "32": "/images/icon32.png",
         "48": "/images/icon48.png",
         "128": "/images/icon128.png"
-      }
+    },
+    "applications": {
+        "gecko": {
+            "id": "wesselvandam2000+brightspace_extension@gmail.com"
+        }
+    }
 }
