--- a/manifest.json
+++ b/manifest.json
@@ -1,75 +1,76 @@
 {
-    "name": "BrightSpace Open In New Tab Extension",
-    "description": "Allows users of BrightSpace to open PDF's, video's and text shown in the 'Content' tab in a separate tab using a button.",
-    "version": "1.4",
-    "manifest_version": 3,
-    "permissions": ["activeTab"],
-    "content_scripts": [
-        {
-          "matches": [
-            "https://brightspace.universiteitleiden.nl/*",
-            "https://brightspace.tudelft.nl/*",
-            "https://brightspace.rug.nl/*",
-            "https://brightspace.avans.nl/*",
-            "https://brightspace.ru.nl/*",
-            "https://brightspace.hhs.nl/*",
-            "https://brightspace.wur.nl/*",
-            "https://brightspace.cpcc.edu/*",
-            "https://brightspace.ccc.edu/*",
-            "https://brightspace.aacps.org/*",
-            "https://brightspace.carleton.ca/*",
-            "https://brightspace.mclennan.edu/*",
-            "https://brightspace.esc.edu/*",
-            "https://brightspace.ou.nl/*",
-            "https://brightspace.hr.nl/*",
-            "https://brightspace.bournemouth.ac.uk/*",
-            "https://brightspace.potsdam.edu/*",
-            "https://brightspace.mtmercy.edu/*",
-            "https://brightspace.uindy.edu/*",
-            "https://brightspace.purchase.edu/*",
-            "https://brightspace.une.edu/*",
-            "https://brightspace.binghamton.edu/*",
-            "https://brightspace.uakron.edu/*",
-            "https://brightspace.fitnyc.edu/*",
-            "https://brightspace.brockport.edu/*",
-            "https://brightspace.uos.ac.uk/*",
-            "https://brightspace.plattsburgh.edu/*",
-            "https://brightspace.eureka.edu/*",
-            "https://brightspace.anc.edu/*",
-            "https://brightspace.tisoh.edu/*",
-            "https://brightspace.ucc.on.ca/*",
-            "https://brightspace.prairie.edu/*",
-            "https://brightspace.eden.edu/*",
-            "https://brightspace.catsone.com/*",
-            "https://brightspace.ucd.ie/*",
-            "https://brightspace.libf.ac.uk/*",
-            "https://brightspace.tudublin.ie/*",
-            "https://brightspace.bpc.edu/*",
-            "https://brightspace.shepherd.edu/*",
-            "https://brightspace.indwes.edu/*",
-            "https://brightspace.lmu.edu/*",
-            "https://brightspace.uhi.ac.uk/*",
-            "https://brightspace.vanderbilt.edu/*",
-            "https://tafeqldtc.brightspace.com/*",
-	          "https://learn.inside.dtu.dk/*",
-            "https://bright.uvic.ca/*"
-          ],
-          "all_frames": true,
-          "match_origin_as_fallback": true,
-          "run_at": "document_idle",
-          "js": ["content-script.js"],
-          "css": ["styles.css"]
-        }
+  "name": "BrightSpace Open In New Tab Extension",
+  "description": "Allows users of BrightSpace to open PDF's, video's and text shown in the 'Content' tab in a separate tab using a button.",
+  "version": "1.5",
+  "manifest_version": 3,
+  "permissions": ["activeTab"],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://brightspace.universiteitleiden.nl/*",
+        "https://brightspace.tudelft.nl/*",
+        "https://brightspace.rug.nl/*",
+        "https://brightspace.avans.nl/*",
+        "https://brightspace.ru.nl/*",
+        "https://brightspace.hhs.nl/*",
+        "https://brightspace.wur.nl/*",
+        "https://brightspace.cpcc.edu/*",
+        "https://brightspace.ccc.edu/*",
+        "https://brightspace.aacps.org/*",
+        "https://brightspace.carleton.ca/*",
+        "https://brightspace.mclennan.edu/*",
+        "https://brightspace.esc.edu/*",
+        "https://brightspace.ou.nl/*",
+        "https://brightspace.hr.nl/*",
+        "https://brightspace.bournemouth.ac.uk/*",
+        "https://brightspace.potsdam.edu/*",
+        "https://brightspace.mtmercy.edu/*",
+        "https://brightspace.uindy.edu/*",
+        "https://brightspace.purchase.edu/*",
+        "https://brightspace.une.edu/*",
+        "https://brightspace.binghamton.edu/*",
+        "https://brightspace.uakron.edu/*",
+        "https://brightspace.fitnyc.edu/*",
+        "https://brightspace.brockport.edu/*",
+        "https://brightspace.uos.ac.uk/*",
+        "https://brightspace.plattsburgh.edu/*",
+        "https://brightspace.eureka.edu/*",
+        "https://brightspace.anc.edu/*",
+        "https://brightspace.tisoh.edu/*",
+        "https://brightspace.ucc.on.ca/*",
+        "https://brightspace.prairie.edu/*",
+        "https://brightspace.eden.edu/*",
+        "https://brightspace.catsone.com/*",
+        "https://brightspace.ucd.ie/*",
+        "https://brightspace.libf.ac.uk/*",
+        "https://brightspace.tudublin.ie/*",
+        "https://brightspace.bpc.edu/*",
+        "https://brightspace.shepherd.edu/*",
+        "https://brightspace.indwes.edu/*",
+        "https://brightspace.lmu.edu/*",
+        "https://brightspace.uhi.ac.uk/*",
+        "https://brightspace.vanderbilt.edu/*",
+        "https://tafeqldtc.brightspace.com/*",
+        "https://learn.inside.dtu.dk/*",
+        "https://bright.uvic.ca/*"
       ],
-    "icons": {
-        "16": "/images/icon16.png",
-        "32": "/images/icon32.png",
-        "48": "/images/icon48.png",
-        "128": "/images/icon128.png"
-    },
-    "applications": {
-        "gecko": {
-            "id": "wesselvandam2000+brightspace_extension@gmail.com"
-        }
+      "all_frames": true,
+      "match_origin_as_fallback": true,
+      "run_at": "document_idle",
+      "js": ["content-script.js"],
+      "css": ["styles.css"]
     }
+  ],
+  "icons": {
+    "16": "/images/icon16.png",
+    "32": "/images/icon32.png",
+    "48": "/images/icon48.png",
+    "128": "/images/icon128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "brightspace-extension@wesselvandam.com",
+      "strict_min_version": "109.0"
+    }
+  }
 }
